--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "netresearch/jsonmapper": "^3.1",
-        "tebru/retrofit-php": "dev-master",
+        "tebru/retrofit-php": "^3.3",
         "ext-json": "*"
     },
     "autoload": {
